Added best bet service
